fix: wrap quizzes usuario

--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@
     display: flex;
     gap: 15px;
     margin-top: 10px;
+    flex-wrap: wrap;
 }
 
 /* Fim do componente de quizzes do usuário - Tela 1 */
